@@ -3,3 +3,6 @@
 language: R
 sudo: false
 cache: packages
+
+after_success:
+  - Rscript -e 'covr::codecov()'
