@@ -20,3 +20,5 @@ LinkingTo: Rcpp
 Imports:
     Rcpp
 RoxygenNote: 5.0.1
+Suggests: testthat,
+    covr
