@@ -1,0 +1,4 @@
+library(testthat)
+library(ABCoptim)
+
+test_check("ABCoptim")
