@@ -1,3 +1,7 @@
+2016-11-04  George G. Vega Yon (g.vegayon@gmail.com)
+	* .travis.yml*: Added codecov.
+	* tests/*: Added testthat.
+
 2016-11-03  George G. Vega Yon (g.vegayon@gmail.com)
 	* R/*.R: Adding roxygen to the project.
 	* src/abc.cpp: Adding pure C++ version of the function
